Bug 162325 - (vertical text) Fill character setting "・" , the last character spacing is not enogh.
Summary: (vertical text) Fill character setting "・" , the last character spacing is no...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.8.0 target:25.2.5
Keywords:
Depends on:
Blocks: Vertical-Text
  Show dependency treegraph
 
Reported: 2024-08-03 04:04 UTC by Saburo
Modified: 2025-05-22 08:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample(windows BIZUD Mincho) (15.08 KB, application/vnd.oasis.opendocument.text)
2024-08-03 04:07 UTC, Saburo
Details
Sample(Linux Noto Serif CJK JP) (13.27 KB, application/vnd.oasis.opendocument.text)
2024-08-03 04:08 UTC, Saburo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Saburo 2024-08-03 04:04:03 UTC
Description:
The same Japanese font is used for western and asian.
When the tab fill character is set to ・,
When writing horizontally, there is no problem, but when writing vertically, the last character is jammed.

Steps to Reproduce:
1.New Text Document
2.Input "abc(tab)def"
3.Format - Paragraph
Tabs
 Position 3cm
 Fill Character "・"(U+30fb)
4.Ctrl+A, Format - Character
Font
 Western/Asian
 Noto Serif JP(Windows)
 Noto Serif CJK JP(Linux)
5.Format - Page style
Page
 Text direction:Right-to-left(vertical)

Actual Results:
The last character is jammed.

Expected Results:
Evenly spaced as in horizontal writing


Reproducible: Always


User Profile Reset: No

Additional Info:
Skia is the same whether it's on or off.

repro「・」U+30fb
not repro「・」U+ff65

https://ask.libreoffice.org/t/topic/108731

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4031659233958a5bf93ea86e8fe117fd0dd45c10
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 01e6e4303e5a9966f102e0357fe0354a2f74a1c4
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded
Comment 1 Saburo 2024-08-03 04:07:52 UTC
Created attachment 195675 [details]
sample(windows BIZUD Mincho)
Comment 2 Saburo 2024-08-03 04:08:25 UTC
Created attachment 195676 [details]
Sample(Linux Noto Serif CJK JP)
Comment 3 Regina Henschel 2024-08-04 14:53:34 UTC
Happens with other fill characters too, e.g with U+3147. A problem with Katakana full width characters?

Tested in Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dc9486f2443fa52588b625c0a2a288bff56a7a45
CPU threads: 32; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2025-05-20 18:47:39 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e92cb38d63187af20c894c63988ca3a7d35d6f04

tdf#162325 vcl: Fix overlapping CJK in vertical justified layouts

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-05-22 08:35:57 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/460bbdfcb198de637d51ddf6be99d9039ebf8f48

tdf#162325 vcl: Fix overlapping CJK in vertical justified layouts

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.