tdf#162325 vcl: Fix overlapping CJK in vertical justified layouts

This change fixes a logic error causing the rightmost (bottom-most)
glyph to be shifted incorrectly inside GenericSalLayout::Justify() in
vertical CJK text.

Change-Id: I525df1496f576ddab26e051adc5e544896fe86e9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185567
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit e92cb38d63187af20c894c63988ca3a7d35d6f04)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185576
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>